# LightFrame

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  models.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
.cursor/rules/: pre-push-checks.mdc
.githooks/: commit-msg
.github/workflows/: bench.yml  build.yml
crates/catchlight-ai/: Cargo.toml
crates/catchlight-ai/src/: clip.rs  dispatcher.rs  face.rs  lib.rs  models.rs  python_sidecar.rs  screenshot.rs  similar.rs  status.rs
crates/catchlight-core/: Cargo.toml
crates/catchlight-core/src/: config.rs  decode.rs  error.rs  lib.rs  media.rs
crates/catchlight-db/: Cargo.toml
crates/catchlight-db/benches/: db_bench.rs
crates/catchlight-db/src/: lib.rs  migrations.rs  repo.rs
crates/catchlight-db/tests/: edge_cases.rs  integration.rs
crates/catchlight-dedup/: Cargo.toml
crates/catchlight-dedup/benches/: dedup_bench.rs
crates/catchlight-dedup/src/: exact.rs  lib.rs  perceptual.rs
crates/catchlight-dedup/tests/: hash_tests.rs
crates/catchlight-geo/: Cargo.toml
crates/catchlight-geo/src/: lib.rs
crates/catchlight-indexer/: Cargo.toml
crates/catchlight-indexer/src/: lib.rs  mft.rs  scanner.rs  watcher.rs
crates/catchlight-indexer/tests/: scanner_test.rs
crates/catchlight-metadata/: Cargo.toml
crates/catchlight-metadata/src/: exif.rs  lib.rs
crates/catchlight-metadata/tests/: exif_test.rs
crates/catchlight-thumbnail/: Cargo.toml
crates/catchlight-thumbnail/src/: lib.rs
crates/catchlight-thumbnail/tests/: thumb_test.rs
crates/catchlight-video/: Cargo.toml
crates/catchlight-video/src/: lib.rs
crates/lightframe-ai/: Cargo.toml
crates/lightframe-ai/src/: clip.rs  dispatcher.rs  face.rs  lib.rs  models.rs  python_sidecar.rs  screenshot.rs  status.rs  types.rs
crates/lightframe-cli/: Cargo.toml
crates/lightframe-cli/src/: main.rs
crates/lightframe-core/: Cargo.toml
crates/lightframe-core/src/: config.rs  decode.rs  error.rs  lib.rs  media.rs
crates/lightframe-db/: Cargo.toml
crates/lightframe-db/benches/: db_bench.rs
crates/lightframe-db/src/: lib.rs  migrations.rs  repo.rs
crates/lightframe-db/tests/: edge_cases.rs  integration.rs
crates/lightframe-dedup/: Cargo.toml
crates/lightframe-dedup/benches/: dedup_bench.rs
crates/lightframe-dedup/src/: exact.rs  lib.rs  perceptual.rs
crates/lightframe-dedup/tests/: hash_tests.rs
crates/lightframe-geo/: Cargo.toml
crates/lightframe-geo/src/: lib.rs
crates/lightframe-indexer/: Cargo.toml
crates/lightframe-indexer/benches/: scan_bench.rs
crates/lightframe-indexer/src/: lib.rs  live_photo.rs  mft.rs  scanner.rs  watcher.rs
crates/lightframe-indexer/tests/: scanner_test.rs
crates/lightframe-metadata/: Cargo.toml
crates/lightframe-metadata/src/: exif.rs  lib.rs
crates/lightframe-metadata/tests/: exif_test.rs
crates/lightframe-thumbnail/: Cargo.toml
crates/lightframe-thumbnail/benches/: thumb_bench.rs
crates/lightframe-thumbnail/src/: lib.rs
crates/lightframe-thumbnail/tests/: thumb_test.rs
crates/lightframe-video/: Cargo.toml
crates/lightframe-video/src/: lib.rs
dev/bench/: data.js
docs/: 0-research-report.md  1-tech-stack-decision.md  2-requirements.md  3-architecture.md  4-detailed-design.md  5-development-plan.md  6-gpu-acceleration.md  7-performance-optimization.md  BETA_ROADMAP.md  PRIVACY.md  SIGNING.md  USER_GUIDE.md
python/: pyproject.toml  requirements.txt
python/catchlight_ai/: __init__.py  __main__.py  server.py
python/lightframe_ai/: __init__.py  __main__.py  server.py
scripts/: dev.sh  tag-and-push.sh
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  face_protocol.rs  image_edit.rs  lib.rs  logging.rs  main.rs  memory.rs  memory_budget.rs  original_protocol.rs  protocol_utils.rs  scan.rs  state.rs  thumb_cache.rs  thumb_protocol.rs  thumb_regen.rs  watcher.rs
src-tauri/src/commands/: ai.rs  albums.rs  dedup.rs  media.rs  mod.rs  models.rs  scan.rs  settings.rs
src-tauri/tests/: e2e.rs
src/components/albums/: AlbumDetailView.test.tsx  AlbumDetailView.tsx  AlbumListView.test.tsx  AlbumListView.tsx
src/components/dedup/: DedupView.test.tsx  DedupView.tsx
src/components/deleted/: DeletedView.test.tsx  DeletedView.tsx
src/components/editor/: AdjustmentSlider.tsx  ColorSection.tsx  CropSection.tsx  CurvesSection.tsx  DetailSection.tsx  EditorSection.tsx  EffectsSection.tsx  ImageEditor.test.tsx  ImageEditor.tsx  LevelsSection.tsx  LightSection.tsx  SelectiveColorSection.tsx
src/components/favorites/: FavoritesView.test.tsx  FavoritesView.tsx
src/components/folders/: FolderView.test.tsx  FolderView.tsx
src/components/gallery/: PhotoCard.test.tsx  PhotoCard.tsx  PhotoGrid.test.tsx  PhotoGrid.tsx  PreviewPopup.test.tsx  PreviewPopup.tsx  SelectionToolbar.test.tsx  SelectionToolbar.tsx  VideosView.test.tsx  VideosView.tsx
src/components/layout/: MainContent.test.tsx  MainContent.tsx  NavIcons.test.tsx  NavIcons.tsx  Sidebar.test.tsx  Sidebar.tsx
src/components/locations/: LocationMapView.tsx  LocationView.test.tsx  LocationView.tsx
src/components/map/: MapView.tsx
src/components/memories/: MemoriesView.test.tsx  MemoriesView.tsx  MemoryDetailView.test.tsx  MemoryDetailView.tsx
src/components/people/: PeopleView.test.tsx  PeopleView.tsx  (+2 more)
src/hooks/: useImagePreloader.test.ts  useImagePreloader.ts  useLongPress.test.ts  useLongPress.ts  useMediaQuery.test.ts  useMediaQuery.ts  useScrollIntent.test.ts  useScrollIntent.ts  useTheme.test.ts  useTheme.ts
src/i18n/: index.test.ts  index.ts  useTranslation.ts
src/integration/: workflows.test.tsx
src/lib/: curves.test.ts  curves.ts  dragMedia.test.ts  dragMedia.ts  editParams.test.ts  editParams.ts  errors.test.ts  errors.ts  escapeHtml.test.ts  keyboard.test.ts  keyboard.ts  mock-data.ts  protocol.test.ts  tauri.test.ts  tauri.ts
src/store/: appStore.test.ts  appStore.ts
src/styles/: globals.css
src/test/: setup.ts
(+46 files in other folders)
