[workspace]
members = ["src-tauri", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.15"
edition = "2024"
license = "MIT"
authors = ["LightFrame Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.33", features = ["bundled", "blob"] }
blake3 = "1"
image = { version = "0.25", features = ["avif"] }
webp = "0.3"
kamadak-exif = "0.5"
rawloader = "0.37"
lightframe-core = { path = "crates/lightframe-core" }
lightframe-db = { path = "crates/lightframe-db" }
lightframe-indexer = { path = "crates/lightframe-indexer" }
lightframe-metadata = { path = "crates/lightframe-metadata" }
lightframe-thumbnail = { path = "crates/lightframe-thumbnail" }
lightframe-dedup = { path = "crates/lightframe-dedup" }
lightframe-ai = { path = "crates/lightframe-ai" }
lightframe-geo = { path = "crates/lightframe-geo" }
lightframe-video = { path = "crates/lightframe-video" }
