[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "catchlight-ai"
version = "0.1.0"
description = "CatchLight AI sidecar — JSON-RPC server for ML/vision tasks"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
]

[project.scripts]
catchlight-ai = "catchlight_ai.server:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["catchlight_ai*"]
