[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lightframe-ai"
version = "0.1.0"
description = "LightFrame AI sidecar — JSON-RPC server for ML/vision tasks"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
]

[project.scripts]
lightframe-ai = "lightframe_ai.server:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["lightframe_ai*"]
