[package]
name = "catchlight-app"
version.workspace = true
edition.workspace = true
description = "CatchLight (拾光) — cross-platform photo viewer and manager"
default-run = "catchlight-app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
http = "1"
chrono = { version = "0.4", features = ["serde"] }

catchlight-core.workspace = true
catchlight-db.workspace = true
catchlight-indexer.workspace = true
catchlight-metadata.workspace = true
catchlight-thumbnail.workspace = true
catchlight-dedup.workspace = true
catchlight-ai.workspace = true
futures = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
