[package]
name = "lightframe-app"
version.workspace = true
edition.workspace = true
description = "LightFrame (影迹) — cross-platform photo viewer and manager"
default-run = "lightframe-app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
tracing-appender = "0.2"
dirs = "6"
http = "1"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"

lightframe-core.workspace = true
lightframe-db.workspace = true
lightframe-indexer.workspace = true
lightframe-metadata.workspace = true
lightframe-thumbnail.workspace = true
lightframe-video.workspace = true
lightframe-dedup.workspace = true
lightframe-ai.workspace = true
lightframe-geo.workspace = true
image.workspace = true
futures = "0.3"

[target.'cfg(not(target_os = "linux"))'.dependencies]
sysinfo = "0.33"

[dev-dependencies]
tempfile = "3"
lightframe-db.workspace = true
lightframe-core.workspace = true
lightframe-indexer.workspace = true
lightframe-dedup.workspace = true
lightframe-metadata.workspace = true
lightframe-thumbnail.workspace = true
image.workspace = true
tokio.workspace = true
chrono = { version = "0.4", features = ["serde"] }
notify = "7"

[features]
custom-protocol = ["tauri/custom-protocol"]
