[package]
name = "catchlight-ai"
version.workspace = true
edition.workspace = true
description = "AI dispatcher: Rust ONNX inference + Python sidecar bridge"

[dependencies]
catchlight-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
