[package]
name = "catchlight-dedup"
version.workspace = true
edition.workspace = true
description = "Photo deduplication: exact (BLAKE3), perceptual (DHash/PHash), semantic (CLIP)"

[dependencies]
catchlight-core.workspace = true
blake3.workspace = true
tokio.workspace = true
tracing.workspace = true
image = "0.25"

[[bench]]
name = "dedup_bench"
harness = false

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
