[package]
name = "catchlight-metadata"
version.workspace = true
edition.workspace = true
description = "EXIF/metadata extraction for photos and videos"

[dependencies]
catchlight-core.workspace = true
serde.workspace = true
tracing.workspace = true
kamadak-exif = "0.5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
