[package]
name = "catchlight-video"
version.workspace = true
edition.workspace = true
description = "Video processing and thumbnail extraction via FFmpeg"

[dependencies]
catchlight-core.workspace = true
tokio.workspace = true
tracing.workspace = true
which = "7"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
