[package]
name = "lightframe-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits, and shared utilities for LightFrame"

[dependencies]
serde.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
image.workspace = true

[features]
default = []
# Enable AVIF decoding via image crate's optional libdav1d backend.
avif-native = ["image/avif-native"]

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
