[package]
name = "lightframe-db"
version.workspace = true
edition.workspace = true
description = "SQLite database layer for LightFrame"

[dependencies]
lightframe-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[[bench]]
name = "db_bench"
harness = false

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
