[package]
name = "lightframe-dedup"
version.workspace = true
edition.workspace = true
description = "Photo deduplication: exact (BLAKE3), perceptual (DHash/PHash), semantic (CLIP)"

[dependencies]
lightframe-core.workspace = true
blake3.workspace = true
tokio.workspace = true
tracing.workspace = true
image.workspace = true

[[bench]]
name = "dedup_bench"
harness = false

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
