[package]
name = "lightframe-indexer"
version.workspace = true
edition.workspace = true
description = "File system indexing engine (MFT/USN on Windows, walkdir/inotify on Linux)"

[dependencies]
lightframe-core.workspace = true
tokio.workspace = true
tracing.workspace = true
notify = "7"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO", "Win32_System_Ioctl"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
