[package]
name = "lightframe-thumbnail"
version.workspace = true
edition.workspace = true
description = "Three-tier thumbnail generation and caching"

[dependencies]
lightframe-core.workspace = true
blake3.workspace = true
tokio.workspace = true
tracing.workspace = true
image = "0.25"

[dev-dependencies]
tempfile = "3"
