[package]
name = "lightframe-thumbnail"
version.workspace = true
edition.workspace = true
description = "Three-tier thumbnail generation and caching"

[dependencies]
lightframe-core.workspace = true
blake3.workspace = true
tokio.workspace = true
tracing.workspace = true
image.workspace = true
webp.workspace = true

[[bench]]
name = "thumb_bench"
harness = false

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
lightframe-core.workspace = true
image.workspace = true
